--- a/data-deduplication-engine-ui/package.json
+++ b/data-deduplication-engine-ui/package.json
@@ -15,8 +15,11 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "date-fns": "^2.29.3",
+    "font-awesome": "^4.7.0",
     "js-file-download": "^0.4.12",
     "mdb-react-ui-kit": "^4.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^18.2.0",
